# honeycomb-osdi23-ae

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: BuildUtils.cmake  hunter_config.cmake
dev-support/: test-integration.sh  test-patch.sh
dev-support/ci-docker/: Dockerfile  README.md
doc/: CSPRNG.md
experiments/: CMakeLists.txt  README.md
experiments/accel_preconditions/: 101.tpacf.json  103.stencil.json  104.lbm.json  110.fft.json  112.spmv.json  114.mriq.json  (+11 more)
experiments/ethash/: CMakeLists.txt  dag_cache_manager.cc  dag_cache_manager.h  dag_cache_manager_base.cc  dag_cache_manager_base.h  dag_cache_manager_test.cc  dualsolver_types.h  ethash.cl  ethash_solver.cc  ethash_solver.h  ethash_test.cc  ethash_types.h  keccak.clh
experiments/hello-world/: CMakeLists.txt  hello-world.cu  main.cc
experiments/launchkernel/: CMakeLists.txt  benchmark.cc  pingpong.cu
experiments/lib/: CMakeLists.txt
experiments/lib/experiments/: platform.h
experiments/lib/experiments/linux/: linux_platform.cc
experiments/lib/experiments/resnet/: resnet_inference.h
experiments/lib/experiments/vram-rpc/: cpu_dispatch.cc  cpu_dispatch.h  gpu_direct_dispatch.cc  gpu_direct_dispatch.h
experiments/resnet/: CMakeLists.txt  MIOpenIm2d2Col.inc  MIOpenUtilKernels4.inc  benchmark.cc  conv2d.h  conv_replacement.cuh  elementwise.cu  gen_winograd.py  kernel_replacement.cl  resnet1.cc  resnet1.py  resnet18.cc  resnet18.py  resnet_gen_kernels.cl  resnet_inference.cc  resnet_test.cc  wincnn.py  winograd.h  winograd_test.cc
experiments/vram-rpc/pingpong/: CMakeLists.txt  rpc-pingpong-cpu.cc  rpc-pingpong.cc  rpc_pingpong.cu
experiments/vram-rpc/resnet18/: CMakeLists.txt  rpc_resnet18.cc  rpc_resnet18.cu  rpc_resnet18_cpu.cc  rpc_resnet18_params.h
hypervisor/: Cargo.toml
hypervisor/validator/: Cargo.toml
hypervisor/validator/lib/validator/: lib.rs
hypervisor/validator/lib/validator/adt/: interval.rs  mod.rs
hypervisor/validator/lib/validator/analysis/: constant_propagation.rs  dom_frontier.rs  group_pattern.rs  loopbound.rs  loopinfo.rs  match_div.rs  mod.rs  phi.rs  polyhedral.rs  scalar_evolution.rs
hypervisor/validator/lib/validator/error/: mod.rs
hypervisor/validator/lib/validator/fileformat/: code_object.rs  disasm.rs  mod.rs  msgpack.rs  parser.rs
hypervisor/validator/lib/validator/ir/: constraints.rs  dom.rs  instruction.rs  machine.rs  mod.rs  runtime_info.rs  value.rs
hypervisor/validator/lib/validator/isa/: mod.rs
hypervisor/validator/lib/validator/isa/rdna2/: decoder.rs  dispatch_packet.rs  effect.rs  ir.rs  isa.rs  mod.rs  opcodes.rs  target.rs
hypervisor/validator/lib/validator/prover/: global_memory.rs  mod.rs  scalar_range.rs  symbolic_heap.rs
hypervisor/validator/lib/validator/support/: diagnostic.rs  mod.rs  safe_math.rs
hypervisor/validator/lib/validator/tests/: cfg.rs  memory_analysis.rs  mod.rs  scev.rs
hypervisor/validator/testcases/loops/: matrix.cu  matrix.json  scalar_load_store.cu  scalar_load_store.json  vector_store.cu  vector_store.json
hypervisor/vmm-sm-dsl/dsl/: Cargo.toml
lib/: CMakeLists.txt
lib/runtime-gpu/channel/: CMakeLists.txt  bigint.h  channel.cu  dh_test.cc  montgomery.h  rfc5514.h  rfc5514_impl.h
scripts/: pass_file.sh  pass_host_file.sh  spec_accel_patch_build.sh  switch_amdgpu_to_honeycomb.sh  switch_amdgpu_to_host.sh
userspace/: CMakeLists.txt
userspace/lib/opencl/cratercl/: CMakeLists.txt  api.h  cl_commandqueue.cc  cl_commandqueue.h  cl_context.cc  cl_context.h  cl_device.cc  cl_device.h  cl_event.cc  cl_event.h  cl_icd.cc  cl_kernel.cc  cl_kernel.h  cl_memobj.cc  cl_memobj.h  cl_platform.cc  cl_program.cc  cl_program.h  dispatch.cc  icd_dispatch.h  ref_counted_object.h
userspace/lib/opencl/hip/: CMakeLists.txt  bindings.cc  device_context.cc  device_context.h  hsa_compute.cc  hsa_mm.cc  module.cc  module.h
userspace/lib/opencl/hip/elf/: CMakeLists.txt  amdgpu_program.cc  amdgpu_program.h  code_object_v3_metadata_parser.cc  code_object_v3_metadata_parser.h  elf.h  llvm_elf_parser.cc  msgpack.cc  msgpack.h  msgpack_test.cc  parser.cc  parser.h  parser_test.cc
userspace/lib/opencl/hip/usm/: CMakeLists.txt  aes_buffer.cc  aes_buffer.h  aes_ctr.cu  aes_device.cc  aes_device.h  aes_device_test.cc  memcpy.cc  memcpy.h  secure_memcpy.h
userspace/lib/opencl/hsa/: CMakeLists.txt  assert.h  bump_allocator.cc  bump_allocator.h  event.cc  event.h  hsa_program.h  kfd_event.cc  kfd_event.h  memory_manager.cc  memory_manager.h  platform.cc  platform.h  queue.cc  queue.h  queue_aql.cc  queue_sdma.cc  ring_allocator.cc  ring_allocator.h  runtime_options.cc  runtime_options.h  sdma_ops.cc  sdma_ops.h  signals.cc  signals.h  slab_allocator.cc  slab_allocator.h  types.h  utils.h
userspace/lib/opencl/hsa/enclave/: CMakeLists.txt  enclave_queue.h  enclave_queue_aql.cc  enclave_queue_sdma.cc  guest_device.cc  guest_event.cc  guest_memory.cc  guest_memory.h  guest_memory_manager.cc  guest_platform.cc  guest_platform.h  guest_rpc_client.cc  guest_rpc_client.h  idl.h  transmit_buffer.cc  transmit_buffer.h
userspace/lib/opencl/hsa/g6/: CMakeLists.txt  g6_device.cc  g6_device.h  g6_ioctl.h  g6_memory.cc  g6_memory.h  g6_memory_manager.cc  g6_memory_manager.h  g6_platform.cc  g6_platform.h  g6_queue.h  g6_queue_aql.cc  g6_queue_sdma.cc  page_table.cc  page_table.h
userspace/lib/opencl/hsa/kfd/: gtt_memory.cc  kfd_device.cc  kfd_device.h  kfd_memory.h  kfd_memory_manager.cc  kfd_memory_manager.h  kfd_platform.cc  kfd_platform.h
userspace/tests/opencl/: CMakeLists.txt  opencl_test_utils.cc  opencl_test_utils.h
userspace/tests/opencl/launch_kernel/: CMakeLists.txt  fill.cu  launch_kernel_test.cc
userspace/tests/opencl/memcpy/: CMakeLists.txt  memcpy_test.cc
userspace/tests/opencl/ring_allocator/: CMakeLists.txt  ring_allocator_test.cc
userspace/tests/rocm/compute_test/: CMakeLists.txt  compute_test.cc  compute_test_base.cc  compute_test_base.h  enclave_compute_test.cc
userspace/tests/rocm/sdma_test/: CMakeLists.txt  enclave_sdma_test.cc  g6_sdma_test.cc  sdma_test.cc  sdma_test_base.cc  sdma_test_base.h
(+75 files in other folders)
