[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = {version = "0.5", features = ["std", "elf64"]}
env_logger = "0.9"
thiserror = "1.0"
smallvec = "1.9"
validator_macros = { path = "../validator_macros"}
bitflags = "1.3"
bitfield = "0.14"
clap = "3.2"
static_assertions = "1.1"
petgraph = "0.6"
smallset = "0.1"
json = "0.12"

[lib]
name = "validator"
path = "lib/validator/lib.rs"

[[bin]]
name = "readelf"
path = "bin/readelf/main.rs"

[[bin]]
name = "mc"
path = "bin/mc/main.rs"

[[bin]]
name = "objdump"
path = "bin/objdump/main.rs"

[[bin]]
name = "replace-padding"
path = "bin/replace-padding/main.rs"

[[bin]]
name = "validator"
path = "bin/validator/main.rs"

[[bin]]
name = "figure9"
path = "bin/figure9/main.rs"
